# epitome

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  test_epitome.py  tox.ini
.circleci/: config.yml
example/: .cookiecutterrc  README.md  pyproject.toml  tox.ini
example/src/: example.py
example/src/example/: cli.py
example/tests/: test_example.py
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .cookiecutterrc  .envrc  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/.github/workflows/: test.yml
{{cookiecutter.project_name}}/src/: {{cookiecutter.project_name}}.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: cli.py
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.project_name}}.py
