[tool.poetry]
name = "epitome"
version = "1.0.0"
description = "A cookiecutter python cli project."
authors = ["Michael Joseph <michaeljoseph+github@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pre-commit = "^1.18"
pytest-cookies = "^0.4.0"
pytest-watch = "^4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
