[tool.poetry]
name = "example"
version = "0.0.1"
description = "an example project"
authors = ["Michael Joseph <michaeljoseph+github@gmail.com>"]
packages = [
    { include = "example", from = "src" },
]
include = [
    "README.md",
    "tox.ini",
    "tests/*.py",
]

[tool.poetry.scripts]
example = 'example.cli:main'

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"

[tool.poetry.dev-dependencies]
pre-commit = "^1.18"
pytest-cov = "^2.7"
pytest-watch = "^4.2"

[tool.black]
line-length = 88
skip-string-normalization = "True"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"