[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.0.1"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }}"]
include = [
    "README.md",
    "tox.ini",
    "tests/*.py",
]

[tool.poetry.scripts]
{{ cookiecutter.project_name }} = '{{ cookiecutter.project_name }}:main'

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
heartrate = "^0.2.1"
coloredlogs = "^10.0"
emoji = "^0.5.4"
colorful = "^0.5.4"

[tool.poetry.dev-dependencies]
pre-commit = "^1.18"
pytest-cov = "^2.7"
pytest-watch = "^4.2"
pytest-mock = "^1.10"

[tool.black]
line-length = 100
skip-string-normalization = "True"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"